--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,52 +1,25 @@
 <!DOCTYPE html>
-<html lang="en" data-bs-theme="dark">
-    <head>
-        <link href="{{ '/static/structure/bootstrap/bootstrap.min.css' | relative_url }}" rel="stylesheet">
-        <link href="{{ 'static/style.css' | relative_url }}" rel="stylesheet">
-
-        <title>{{ page.title }}</title>
-
-        <link rel="icon" href="{{ '/files/logo/colour-icon-square-top.png' | relative_url }}" type="image/png">
-    </head>
-
-
-    <body class="bg-body text-body">
-        {% include navbar.html %}
-
-        <main class="container py-4">
-            {{ content }}
-        </main>
-        
-        <nav class="navbar navbar-expand fixed-top">
-        <div class="container-fluid">
-            <a href="#">
-                <img src="{{ '/files/logo/colour-icon-square-top.png' | relative_url }}" class="corner-logo" width="50" alt="Logo">
-            </a>
-
-            <a class="navbar-brand" href="#">
-                OChameleon
-            </a>
-
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav ml-auto left-aligned">
-                <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="{{ '/' | relative_url }}" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                    Team
-                </a>
-                <ul class="dropdown-menu">
-                    <li><a class="dropdown-item" href="https://google.com">Members</a></li>
-                    <li><a class="dropdown-item" href="https://ecosia.com">Attributions</a></li>
-                </ul>
-                </li>
-
-                <li class="nav-item">
-                <a class="nav-link" href="{{ '/contacts.html' | relative_url }}">Contacts</a>
-                </li>
-            </ul>
-            </div>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>{{ page.title }}</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+</head>
+<body class="bg-body text-body">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <div class="container">
+        <a class="navbar-brand" href="{{ '/' | relative_url }}">My Site</a>
+        <div class="collapse navbar-collapse">
+        <ul class="navbar-nav">
+            <li class="nav-item"><a class="nav-link" href="{{ '/' | relative_url }}">Home</a></li>
+            <li class="nav-item"><a class="nav-link" href="{{ '/contacts' | relative_url }}">Contacts</a></li>
+        </ul>
         </div>
-        </nav>
+    </div>
+    </nav>
 
-        <script src="{{ '/static/structure/bootstrap/bootstrap.bundle.min.js' | relative_url }}"></script>
-    </body>
+    <main class="container py-4">
+        {{ content }}
+    </main>
+</body>
 </html>
