--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>{{ page.title }}</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="{{ '/static/structure/bootstrap/bootstrap.min.css' | relative_url }}" rel="stylesheet">
 </head>
+
 <body class="bg-body text-body">
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container">
