--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,13 +12,31 @@
     </head>
 
     <body class="bg-body text-body">
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <div class="container">
-            <a class="navbar-brand" href="{{ '/' | relative_url }}">My Site</a>
-            <div class="collapse navbar-collapse">
-            <ul class="navbar-nav">
-                <li class="nav-item"><a class="nav-link" href="{{ '/' | relative_url }}">Home</a></li>
-                <li class="nav-item"><a class="nav-link" href="{{ '/contacts' | relative_url }}">Contacts</a></li>
+        <nav class="navbar navbar-expand fixed-top">
+        <div class="container-fluid">
+            <a href="{{ '/' | relative_url }}">
+                <img src="{{ '/files/logo/colour-icon-square-top.png' | relative_url }}" class="corner-logo" width="50" alt="Logo">
+            </a>
+
+            <a class="navbar-brand" href="{{ '/' | relative_url }}">
+                OChameleon
+            </a>
+
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav ml-auto left-aligned">
+                <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="{{ '/' | relative_url }}" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                    Team
+                </a>
+                <ul class="dropdown-menu">
+                    <li><a class="dropdown-item" href="https://google.com">Members</a></li>
+                    <li><a class="dropdown-item" href="https://ecosia.com">Attributions</a></li>
+                </ul>
+                </li>
+
+                <li class="nav-item">
+                <a class="nav-link" href="{{ '/contacts.html' | relative_url }}">Contacts</a>
+                </li>
             </ul>
             </div>
         </div>
