--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,13 +6,40 @@
         <link href="{{ '/static/structure/bootstrap/bootstrap.min.css' | relative_url }}" rel="stylesheet">
         <link href="{{ 'static/style.css' | relative_url }}" rel="stylesheet">
         
-        <title>{{ page.title }}</title>
+        <title>{{ page.title | OChameleon }}</title>
 
         <link rel="icon" href="{{ '/files/logo/colour-icon-square-top.png' | relative_url }}" type="image/png">
     </head>
 
     <body class="bg-body text-body">
         {% include header.html %}
+
+        <header class="bg-hero-header">
+            <div class="container-fluid">
+                <div class="row">
+                    <div class="col">
+                        <br>
+                    </div>
+                </div>
+                <div class="row m-0">
+                    <div class="col-4"></div>
+                    <div class="col-4">
+                        Capra
+                    </div>
+                    <div class="col-4"></div>
+                </div>
+                <div class="row h-100 align-items-center">
+                    <div class="col">
+                        <h1 class="display-4 title mb-2 text-center">
+                        {{ page.title }}
+                        </h1>
+                        <h2 class="lead title mb-5 text-center"">
+                        {{ page.subtitle }}
+                        </h2>
+                    </div>
+                </div>
+            </div>
+        </header>
 
         <main class="container py-4">
             {{ content }}
