Testing to move content out of <main> tag

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -33,7 +33,7 @@
                         <h1 class="display-4 title mb-2 text-center">
                         {{ page.title }}
                         </h1>
-                        <h2 class="lead title mb-5 text-center"">
+                        <h2 class="lead title mb-5 text-center">
                         {{ page.subtitle }}
                         </h2>
                     </div>
@@ -41,9 +41,7 @@
             </div>
         </header>
 
-        <main class="container py-4">
-            {{ content }}
-        </main>
+        {{ content }}
 
         {% include footer.html %}
 
