--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,17 +1,12 @@
 <header class="bg-hero-header">
     <div class="container-fluid">
-        <div class="row">
-            <div class="col">
-                <br>
-            </div>
-        </div>
-        <div class="row h-100 align-items-center">
+        <div class="row mt-5 h-100 align-items-center">
             <div class="col">
                 <h1 class="display-4 title mb-2 text-center">
-                {{ page.title }}
+                    {{ page.title }}
                 </h1>
-                <h2 class="lead title mb-5 text-center">
-                {{ page.subtitle }}
+                <h2 class="lead title mb-2 text-center">
+                    {{ page.subtitle }}
                 </h2>
             </div>
         </div>
