--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,7 +6,7 @@
         <link href="{{ '/static/structure/bootstrap/bootstrap.min.css' | relative_url }}" rel="stylesheet">
         <link href="{{ 'static/style.css' | relative_url }}" rel="stylesheet">
         
-        <title>{{ page.title }}</title>
+        <title>{{ page.title }} | OChameleon</title>
 
         <link rel="icon" href="{{ '/files/logo/colour-icon-square-top.png' | relative_url }}" type="image/png">
     </head>
