--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,11 @@
 <header class="bg-hero-header">
     <div class="container-fluid">
-        <div class="row mt-10 h-100 align-items-center">
+        <div class="row">
+          <div class="col">
+            <br>
+          </div>
+        </div>
+        <div class="row m-0 h-100 align-items-center">
             <div class="col">
                 <h1 class="display-4 title mb-2 text-center">
                     {{ page.title }}
