--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand fixed-top">
+<nav class="navbar navbar-expand-lg navbar-dark fixed-top">
     <div class="container-fluid">
         <a href="{{ '/' | relative_url }}">
             <img src="{{ '/files/logo/colour-icon-square-top.png' | relative_url }}" class="corner-logo" width="50" alt="Logo">
@@ -9,21 +9,21 @@
         </a>
 
         <div class="collapse navbar-collapse">
-        <ul class="navbar-nav ml-auto left-aligned">
-            <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="{{ '/' | relative_url }}" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                Team
-            </a>
-            <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="https://google.com">Members</a></li>
-                <li><a class="dropdown-item" href="https://ecosia.com">Attributions</a></li>
-            </ul>
-            </li>
+            <ul class="navbar-nav ml-auto left-aligned">
+                <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="{{ '/' | relative_url }}" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                    Team
+                </a>
+                <ul class="dropdown-menu">
+                    <li><a class="dropdown-item" href="https://google.com">Members</a></li>
+                    <li><a class="dropdown-item" href="https://ecosia.com">Attributions</a></li>
+                </ul>
+                </li>
 
-            <li class="nav-item">
-            <a class="nav-link" href="{{ '/contacts.html' | relative_url }}">Contacts</a>
-            </li>
-        </ul>
+                <li class="nav-item">
+                <a class="nav-link" href="{{ '/contacts.html' | relative_url }}">Contacts</a>
+                </li>
+            </ul>
         </div>
     </div>
 </nav>
