--- a/static/style.css
+++ b/static/style.css
@@ -18,7 +18,7 @@
     font-style:  bold;
 }
 
-body {
+html, body {
     background-color: rgb(22, 22, 22);
 
     color: rgb(212, 212, 212);
@@ -44,6 +44,14 @@ div {
     margin-bottom: 12px;
     margin-left:   0px;
     margin-right:  0px;
+}
+
+nav {
+    background-color: rgb(0, 0, 0);
+}
+
+header {
+    background-color: rgb(22, 70, 22);
 }
 
 hr {
