Making menu links active and testing if image outside navbar brand is nearer

--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
     <div class="container-fluid">
+        <img src="{{ '/files/logo/colour-icon-square-top.png' | relative_url }}" href="{{ '/' | relative_url }}" class="corner-logo" width="50" alt="Logo">
         <a class="navbar-brand" href="{{ '/' | relative_url }}">
-            <img src="{{ '/files/logo/colour-icon-square-top.png' | relative_url }}" class="corner-logo" width="50" alt="Logo">
             <b>OChameleon</b>
         </a>
 
@@ -12,7 +12,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="{{ '/' | relative_url }}" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                    <a class="nav-link active dropdown-toggle" href="{{ '/' | relative_url }}" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                         Learn
                     </a>
                     <ul class="dropdown-menu">
@@ -22,11 +22,11 @@
                 </li>
 
                 <li class="nav-item">
-                    <a class="nav-link" href="{{ '/team.html' | relative_url }}">Team</a>
+                    <a class="nav-link active" href="{{ '/team.html' | relative_url }}">Team</a>
                 </li>
 
                 <li class="nav-item">
-                    <a class="nav-link" href="{{ '/contacts.html' | relative_url }}">Contacts</a>
+                    <a class="nav-link active" href="{{ '/contacts.html' | relative_url }}">Contacts</a>
                 </li>
             </ul>
         </div>
