Removing navbar-brand class for noncentering the name in small creen and changing style.css color definition for nav-link:hover (hopefully this time it works)

--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -3,7 +3,7 @@
         <a href="{{ '/' | relative_url }}">
             <img src="{{ '/files/logo/colour-icon-square-top.png' | relative_url }}" class="corner-logo" width="50" alt="Logo">
         </a>
-        <a class="navbar-brand" href="{{ '/' | relative_url }}">
+        <a href="{{ '/' | relative_url }}">
             <b>OChameleon</b>
         </a>
 
