Correcting playground with play and testing a new way of defining coloring for hover od navbar items links

--- a/static/style.css
+++ b/static/style.css
@@ -18,7 +18,7 @@
     font-style:  bold;
 }
 
-.navbar-nav .nav-link:hover {
+.navbar-nav .nav-item .nav-link:hover {
     color: rgb(33, 151, 33);
 }
 
