--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -3,7 +3,7 @@
         <a href="{{ '/' | relative_url }}">
             <img src="{{ '/files/logo/colour-icon-square-top.png' | relative_url }}" class="corner-logo" width="50" alt="Logo">
         </a>
-        <a href="{{ '/' | relative_url }}">
+        <a class="navbar-brand fixed-left" href="{{ '/' | relative_url }}">
             <b>OChameleon</b>
         </a>
 
