--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -12,7 +12,7 @@
         </button>
 
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <ul class="navbar-nav ml-auto left-aligned">
                 <li class="nav-item">
                     <a class="nav-link active" href="{{ '/documentation.html' | relative_url }}">Documentation</a>
                 </li>
