--- a/static/style.css
+++ b/static/style.css
@@ -31,6 +31,11 @@
     color: rgb(33, 151, 33);
 }
 
+.navbar-nav .nav-item .nav-link.active {
+    color: rgb(33, 151, 33);
+    text-decoration: underline;
+}
+
 
 
 
