--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -12,21 +12,21 @@
         </button>
 
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav ml-auto left-aligned">
+            <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link active" href="{{ '/documentation.html' | relative_url }}">Documentation</a>
+                    <a class="nav-link" href="{{ '/documentation.html' | relative_url }}">Documentation</a>
                 </li>
 
                 <li class="nav-item">
-                    <a class="nav-link active" href="{{ '/play.html' | relative_url }}">Play</a>
+                    <a class="nav-link" href="{{ '/play.html' | relative_url }}">Play</a>
                 </li>
 
                 <li class="nav-item">
-                    <a class="nav-link active" href="{{ '/team.html' | relative_url }}">Team</a>
+                    <a class="nav-link" href="{{ '/team.html' | relative_url }}">Team</a>
                 </li>
 
                 <li class="nav-item">
-                    <a class="nav-link active" href="{{ '/contacts.html' | relative_url }}">Contacts</a>
+                    <a class="nav-link" href="{{ '/contacts.html' | relative_url }}">Contacts</a>
                 </li>
             </ul>
         </div>
