--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -14,19 +14,19 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link" href="{{ '/documentation.html' | relative_url }}">Documentation</a>
+                    <a class="nav-link {% if page.url == '/documentation.html' %}active{% endif %}" href="{{ '/documentation.html' | relative_url }}">Documentation</a>
                 </li>
 
                 <li class="nav-item">
-                    <a class="nav-link" href="{{ '/play.html' | relative_url }}">Play</a>
+                    <a class="nav-link {% if page.url == '/play.html' %}active{% endif %}" href="{{ '/play.html' | relative_url }}">Play</a>
                 </li>
 
                 <li class="nav-item">
-                    <a class="nav-link" href="{{ '/team.html' | relative_url }}">Team</a>
+                    <a class="nav-link {% if page.url == '/team.html' %}active{% endif %}" href="{{ '/team.html' | relative_url }}">Team</a>
                 </li>
 
                 <li class="nav-item">
-                    <a class="nav-link" href="{{ '/contacts.html' | relative_url }}">Contacts</a>
+                    <a class="nav-link {% if page.url == '/contacts.html' %}active{% endif %}" href="{{ '/contacts.html' | relative_url }}">Contacts</a>
                 </li>
             </ul>
         </div>
