--- a/static/style.css
+++ b/static/style.css
@@ -27,7 +27,7 @@
     font-size: x-large;
 }
 
-.navbar-nav .nav-item .nav-link.active {
+.navbar-nav .nav-item .nav-link {
     color: rgb(255, 255, 255)
 }
 
