removing class bg-body and text-body from default body layout

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,7 +12,7 @@
         <link rel="icon" href="{{ '/files/logo/colour-icon-square-top.png' | relative_url }}" type="image/png">
     </head>
 
-    <body class="bg-body text-body">
+    <body>
         {% include menu.html %}
 
         {% include header.html %}
