Making footer stay at the bottom also for small content

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,7 +17,9 @@
 
         {% include header.html %}
 
-        {{ content }}
+        <main>
+            {{ content }}
+        </main>
 
         {% include footer.html %}
 
