--- a/static/style.css
+++ b/static/style.css
@@ -20,6 +20,10 @@ header {
     background-color: rgb(22, 70, 22);
 }
 
+footer {
+    background-color: rgb(0, 0, 0);
+}
+
 .navbar-brand {
     font-size: x-large;
 }
@@ -49,8 +53,19 @@ html, body {
     
     font-family: "Monomath";
     
+    height: 100%;
+
     margin-left:   0px;
     margin-right:  0px;
+}
+
+body {
+    display: flex;
+    flex-direction: column;
+}
+
+main {
+    flex: 1;
 }
 
 @media (max-width: 576px) {
