--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,18 +1,11 @@
 <header class="bg-hero-header">
     <div class="container-fluid">
-        <div class="row">
-          <div class="col">
-            <br>
-            <br>
-            <br> 
-          </div>
-        </div>
-        <div class="row m-0 h-100 align-items-center">
+        <div class="row mt-10 align-items-center">
             <div class="col">
-                <h1 class="display-4 title mb-2 text-center">
+                <h1 class="title mb-2 text-center">
                     {{ page.title }}
                 </h1>
-                <h2 class="lead title mb-2 text-center">
+                <h2 class="title mb-2 text-center">
                     {{ page.subtitle }}
                 </h2>
             </div>
