Small corrections to header and footer for testing

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,4 +1,4 @@
-<footer class="footer">
+<footer class="footer mt-4 mb-4">
     <hr>  
-    Ciao a tutti, fan di OChameleon
+    Ciao a tutti, fanatici di OChameleon
 </footer>
