--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,4 +1,4 @@
-<footer class="footer mt-4 mb-4">
+<footer class="footer p-4">
     <hr>  
-    Ciao a tutti, fanatici di OChameleon
+    Ciao a tutti, fanatici pazzi di OChameleon
 </footer>
