--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,6 @@
 <header class="bg-hero-header">
     <div class="container-fluid">
-        <div class="row mt-200 align-items-center">
+        <div class="row pt-5 align-items-center">
             <div class="col">
                 <h1 class="title mb-2 text-center">
                     {{ page.title }}
