Correcting header and changing contaner-fluid to contanier (for now)

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,4 +1,6 @@
 <footer class="footer p-4">
-    <hr>  
-    Ciao a tutti, fanatici pazzi di OChameleon
+    <div class="container">
+        <hr>  
+        Ciao a tutti, fanatici pazzi di OChameleon! Sietew i numeri uno!
+    </div>
 </footer>
