--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,4 +1,4 @@
-<header class="bg-hero-header">
+<header class="bg-hero-header p-2">
     <div class="container">
         <div class="row pt-8 align-items-center">
             <div class="col">
