Correcting padding in header and footer, was too small. Testing pre tag

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,7 +1,7 @@
-<footer class="footer p-2">
+<footer class="footer p-4">
     <div class="container">
         <hr>  
-        Ciao a tutti, fanatici pazzi di OChameleon! Sietew i numeri uno!
+        Ciao a tutti, fanatici di OChameleon! Sietew i numeri uno!
         <hr>
     </div>
 </footer>
