--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,7 +1,7 @@
-<footer class="footer p-4">
+<footer class="footer p-3">
     <div class="container">
         <hr>  
-        Ciao a tutti, fanatici di OChameleon! Sietew i numeri uno!
+        Ciao a tutti, fanatici di OChameleon! Siete i numeri uno!
         <hr>
     </div>
 </footer>
