Removing supid, and not working, highlight for corner name. Now just becomes green when you hover

--- a/static/style.css
+++ b/static/style.css
@@ -31,17 +31,12 @@ footer {
 }
 
 .corner-name a {
-    text-decoration: bold;
+    text-decoration: none;
     color: rgb(255, 255, 255);
 }
 
 .corner-name a:hover {
     color: rgb(33, 151, 33);
-}
-
-.corner-name a.active {
-    color: rgb(33, 151, 33);
-    text-decoration: underline;
 }
 
 .navbar-nav .nav-item .nav-link {
