--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg navbar-dark fixed-top p-3">
     <div class="container">
-        <a href="{{ '/' | relative_url }}" class="corner-name {% if page.url == '/documentation.html' %}active{% endif %}">
+        <a href="{{ '/' | relative_url }}" class="corner-name">
             <img src="{{ '/files/logo/colour-icon-square-top.png' | relative_url }}" class="corner-logo" width="50" alt="Logo">
             <b>OChameleon</b>
         </a>
