--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -1,7 +1,9 @@
 <nav class="navbar navbar-expand-lg navbar-dark fixed-top p-3">
-    <div class="container">
-        <a href="{{ '/' | relative_url }}" class="corner-name">
+    <div class="container-fluid">
+        <a href="{{ '/' | relative_url }}">
             <img src="{{ '/files/logo/colour-icon-square-top.png' | relative_url }}" class="corner-logo" width="50" alt="Logo">
+        </a>
+        <a href="{{ '/' | relative_url }}" class="corner-name fs-2">
             <b>OChameleon</b>
         </a>
 
