--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -1,10 +1,8 @@
 <nav class="navbar navbar-expand-lg navbar-dark fixed-top p-3">
     <div class="container-fluid">
-        <a href="{{ '/' | relative_url }}">
-            <img src="{{ '/files/logo/colour-icon-square-top.png' | relative_url }}" class="corner-logo" width="50" alt="Logo">
-        </a>
-        <a href="{{ '/' | relative_url }}" class="corner-name fs-2">
-            <b>OChameleon</b>
+        <a href="{{ '/' | relative_url }}" class="fs-3">
+            <img src="{{ '/files/logo/colour-icon-square-top.png' | relative_url }}" class="me-1" width="50" alt="Logo">
+            <b>OChameleon</b> 
         </a>
 
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
