Trying to solve the problem using navbar-brand class

--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-expand-lg navbar-dark fixed-top p-3">
     <div class="container-fluid">
-        <a href="{{ '/' | relative_url }}" class="fs-3">
-            <img src="{{ '/files/logo/colour-icon-square-top.png' | relative_url }}" class="me-1" width="50" alt="Logo">
+        <a href="{{ '/' | relative_url }}" class="navbar-brand">
+            <img src="{{ '/files/logo/colour-icon-square-top.png' | relative_url }}" style="margin-right: 0.5rem;" width="50" alt="Logo">
             <b>OChameleon</b> 
         </a>
 
