--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -1,7 +1,7 @@
-<nav class="navbar navbar-expand-lg navbar-dark fixed-top p-2">
+<nav class="navbar navbar-expand-lg navbar-dark fixed-top p-3">
     <div class="container-fluid">
         <a href="{{ '/' | relative_url }}" class="navbar-brand fs-4">
-            <img src="{{ '/files/logo/colour-icon-square-top.png' | relative_url }}" style="margin-right: 0.25rem;" width="50" alt="Logo">
+            <img src="{{ '/files/logo/colour-icon-square-top.png' | relative_url }}" width="42" alt="Logo">
             <b>OChameleon</b> 
         </a>
 
