--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -1,8 +1,7 @@
 <nav class="navbar navbar-expand-lg navbar-dark fixed-top p-3">
     <div class="container-fluid">
         <a href="{{ '/' | relative_url }}" class="navbar-brand fs-4">
-            <img src="{{ '/files/logo/colour-icon-square-top.png' | relative_url }}" width="42" alt="Logo">
-            <b>OChameleon</b> 
+            <img src="{{ '/files/logo/colour-icon-square-top.png' | relative_url }}" width="42" alt="Logo"><b>OChameleon</b> 
         </a>
 
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
