--- a/static/style.css
+++ b/static/style.css
@@ -25,6 +25,18 @@ footer {
     background-color: rgb(0, 0, 0);
 }
 
+.navbar-brand b {
+  margin: 0;
+  padding: 0;
+  display: inline-block;
+}
+
+.navbar-brand img {
+  margin: 0;
+  padding: 0;
+  display: inline-block;
+}
+
 .navbar-nav .nav-item .nav-link {
     color: rgb(255, 255, 255)
 }
