Zero left margin is not enough, we insert 0.5rem

--- a/static/style.css
+++ b/static/style.css
@@ -32,7 +32,10 @@ footer {
 }
 
 .navbar-brand img {
-  margin: 0;
+  margin-top: 0;
+  margin-bottom: 0;
+  margin-left: 0;
+  margin-right: 0.5rem;
   padding: 0;
   display: inline-block;
 }
