--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,5 @@
 <footer class="footer p-3">
-    <div class="container">
+    <div class="container-fluid">
         <hr>  
         Ciao a tutti, fanatici di OChameleon! Siete i numeri uno!
         <hr>
