--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,5 +3,12 @@
         <hr>  
         Ciao a tutti, fanatici di OChameleon! Siete i numeri uno!
         <hr>
+        <div class="theme-toggle-container">
+            <button id="themeToggle" class="btn btn-theme-toggle d-flex align-items-center">
+                <i class="fas fa-sun me-2" id="sunIcon"></i>
+                <i class="fas fa-moon me-2 d-none" id="moonIcon"></i>
+                <span>Toggle Theme</span>
+            </button>
+        </div>
     </div>
 </footer>
