--- a/static/style.css
+++ b/static/style.css
@@ -9,20 +9,53 @@
 }
 
 
+:root {
+    --main-background-color: rgb(18, 18, 18);
+    --nav-backgroung-color: rgb(0, 0, 0);
+    --header-background-color: rgb(22, 70, 22);
+    --footer-background-color: rgb(0, 0, 0);
+    --pre-background-color: rgb(30, 30, 30);
+
+    --main-text-color: rgb(212, 212, 212);
+    --unclicked-text-color: rgb(255, 255, 255);
+    --clicked-text-color: rgb(33, 151, 33);
+
+    --main-card-bg: #343a40;
+    --main-card-border: #495057;
+    --main-button-bg: #0a58ca;
+    --main-button-text: #ffffff;
+}
+
+html[data-bs-theme="light"] {
+    --main-background-color: #212529;
+    --nav-backgroung-color: rgb(250, 248, 243);
+    --header-background-color: rgb(22, 70, 22);
+    --footer-background-color: rgb(255, 255, 255);
+    --pre-background-color: rgb(225, 225, 225);
+    
+    --main-text-color: rgb(85, 86, 89);
+    --unclicked-text-color: rgb(0, 0, 0);
+    --clicked-text-color: rgb(33, 151, 33);
+
+    --main-card-bg: #ffffff;
+    --main-card-border: #dee2e6;
+    --main-button-bg: #0d6efd;
+    --main-button-text: #ffffff;
+}
 
 
 
 nav {
-    background-color: rgb(0, 0, 0);
+    background-color: var(--nav-background-color);
 }
 
 header {
-    padding-top: 5.5rem;
-    background-color: rgb(22, 70, 22);
+    padding-top: 5.3rem;
+    background-color: var(--header-background-color);
 }
 
 footer {
-    background-color: rgb(0, 0, 0);
+    background-color: var(--footer-background-color);
 }
 
 .navbar-brand b {
@@ -41,15 +74,15 @@ footer {
 }
 
 .navbar-nav .nav-item .nav-link {
-    color: rgb(255, 255, 255)
+    color: var(--unclicked-text-color);
 }
 
 .navbar-nav .nav-item .nav-link:hover {
-    color: rgb(33, 151, 33);
+    color: var(--clicked-text-color);
 }
 
 .navbar-nav .nav-item .nav-link.active {
-    color: rgb(33, 151, 33);
+    color: var(--clicked-text-color);
     text-decoration: underline;
 }
 
@@ -59,9 +92,9 @@ footer {
 
 
 html, body {
-    background-color: rgb(18, 18, 18);
+    background-color: var(--main-background-color);
 
-    color: rgb(212, 212, 212);
+    color: var(--main-text-color);
     
     font-family: "Monomath";
     font-size: 18px;
@@ -82,7 +115,7 @@ main {
 }
 
 hr {
-    border: 1px solid rgb(212, 212, 212);
+    border: 1px solid var(--main-text-color);
 
     margin-top:    12px;
     margin-bottom: 12px;
@@ -123,7 +156,7 @@ pre {
     overflow: hidden;
     max-width: 100%;
 
-    background-color:rgb(30, 30, 30);
+    background-color:var(--pre-background-color);
 
     color: rgb(212, 212, 212);
     
