Importing alsto the other style settings and inserting fontawasom icons

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -5,7 +5,7 @@
         <hr>
         <div class="theme-toggle-container">
             <button id="themeToggle" class="btn btn-theme-toggle d-flex align-items-center">
-                <i class="fas fa-sun me-2" id="sunIcon"></i>
+                <i class="fas fa-sun me-2">Light</i>
                 <i class="fas fa-moon me-2 d-none" id="moonIcon"></i>
                 <span>Toggle Theme</span>
             </button>
