Reverting to almost original settings with variables.

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,14 +1,5 @@
 <footer class="footer p-3">
-    <div class="container-fluid">
-        <hr>  
+    <div class="container-fluid m-5">  
         Ciao a tutti, fanatici di OChameleon! Siete i numeri uno!
-        <hr>
-        <div class="theme-toggle-container">
-            <button id="themeToggle" class="btn btn-theme-toggle d-flex align-items-center">
-                <i class="fas fa-sun me-2"></i>
-                <i class="fas fa-moon me-2 d-none" id="moonIcon"></i>
-                <span>Toggle Theme</span>
-            </button>
-        </div>
     </div>
 </footer>
