--- a/static/style.css
+++ b/static/style.css
@@ -23,30 +23,7 @@
     --main-text-color: rgb(212, 212, 212);
     --unclicked-text-color: rgb(255, 255, 255);
     --clicked-text-color: rgb(33, 151, 33);
-
-    --main-card-bg: #343a40;
-    --main-card-border: #495057;
-    --main-button-bg: #0a58ca;
-    --main-button-text: #ffffff;
 }
-
-html[data-bs-theme="light"] {
-    --main-background-color: #212529;
-    --nav-backgroung-color: rgb(250, 248, 243);
-    --header-background-color: rgb(22, 70, 22);
-    --footer-background-color: rgb(255, 255, 255);
-    --pre-background-color: rgb(225, 225, 225);
-    
-    --main-text-color: rgb(85, 86, 89);
-    --unclicked-text-color: rgb(0, 0, 0);
-    --clicked-text-color: rgb(33, 151, 33);
-
-    --main-card-bg: #ffffff;
-    --main-card-border: #dee2e6;
-    --main-button-bg: #0d6efd;
-    --main-button-text: #ffffff;
-}
-
 
 
 
@@ -76,6 +53,8 @@ footer {
 }
 
 .navbar-brand img {
+    color: var(--main-text-color);
+
     margin-top: 0;
     margin-bottom: 0;
     margin-left: 0;
