--- a/static/style.css
+++ b/static/style.css
@@ -15,7 +15,7 @@
 
 :root {
     --main-background-color: rgb(18, 18, 18);
-    --nav-backgroung-color: rgb(0, 0, 0);
+    --nav-background-color: rgb(0, 0, 0);
     --header-background-color: rgb(22, 70, 22);
     --footer-background-color: rgb(0, 0, 0);
     --pre-background-color: rgb(30, 30, 30);
