--- a/static/style.css
+++ b/static/style.css
@@ -25,6 +25,7 @@
     --clicked-text-color: rgb(33, 151, 33);
 }
 
+/*
 html[data-bs-theme="dark"] {
     --main-background-color: rgb(255, 255, 255);
     --nav-background-color: rgb(250, 248, 243);
@@ -36,7 +37,7 @@ html[data-bs-theme="dark"] {
     --unclicked-text-color: rgb(255, 255, 255);
     --clicked-text-color: rgb(33, 151, 33);
 }
-
+*/
 
 
 
