Testing light to dark theme switch

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,7 +1,5 @@
 <footer class="footer p-3">
-    <div class="container-fluid">
-        <hr>  
+    <div class="container-fluid m-5">  
         Ciao a tutti, fanatici di OChameleon! Siete i numeri uno!
-        <hr>
     </div>
 </footer>
