--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,5 +24,8 @@
         {% include footer.html %}
 
         <script src="{{ '/static/structure/bootstrap/bootstrap.bundle.min.js' | relative_url }}"></script>
+        <script src="{{ '/static/assets/icons/fontawesome/regular.min.js' | relative_url }}"></script>
+
+        <script src="{{ '/static/interactive.js' | relative_url }}"></script>
     </body>
 </html>
