--- a/static/style.css
+++ b/static/style.css
@@ -8,36 +8,60 @@
     font-style:  normal;
 }
 
-:root {
-    --main-background-color: rgb(18, 18, 18);
-    --nav-background-color: rgb(0, 0, 0);
-    --header-background-color: rgb(22, 70, 22);
-    --footer-background-color: rgb(0, 0, 0);
-    --pre-background-color: rgb(30, 30, 30);
 
-    --main-text-color: rgb(85, 86, 89);
-    --unclicked-text-color: rgb(0, 0, 0);
-    --clicked-text-color: rgb(33, 151, 33);
+
+
+
+nav {
+    background-color: rgb(0, 0, 0);
 }
 
-/*
-html[data-bs-theme="dark"] {
-    --main-background-color: rgb(255, 255, 255);
-    --nav-background-color: rgb(250, 248, 243);
-    --header-background-color: rgb(22, 70, 22);
-    --footer-background-color: rgb(250, 248, 243);
-    --pre-background-color: rgb(225, 225, 225);
-
-    --main-text-color: rgb(0, 0, 0);
-    --unclicked-text-color: rgb(255, 255, 255);
-    --clicked-text-color: rgb(33, 151, 33);
+header {
+    padding-top: 5.5rem;
+    background-color: rgb(22, 70, 22);
 }
-*/
+
+footer {
+    background-color: rgb(0, 0, 0);
+}
+
+.navbar-brand b {
+    margin: 0;
+    padding: 0;
+    display: inline-block;
+}
+
+.navbar-brand img {
+    margin-top: 0;
+    margin-bottom: 0;
+    margin-left: 0;
+    margin-right: 0.25rem;
+    padding: 0;
+    display: inline-block;
+}
+
+.navbar-nav .nav-item .nav-link {
+    color: rgb(255, 255, 255)
+}
+
+.navbar-nav .nav-item .nav-link:hover {
+    color: rgb(33, 151, 33);
+}
+
+.navbar-nav .nav-item .nav-link.active {
+    color: rgb(33, 151, 33);
+    text-decoration: underline;
+}
+
+
+
+
+
 
 html, body {
-    background-color: var(--main-background-color);
+    background-color: rgb(18, 18, 18);
 
-    color: var(--main-text-color);
+    color: rgb(212, 212, 212);
     
     font-family: "Monomath";
     font-size: 18px;
@@ -58,7 +82,7 @@ main {
 }
 
 hr {
-    border: 1px solid var(--main-text-color);
+    border: 1px solid rgb(212, 212, 212);
 
     margin-top:    12px;
     margin-bottom: 12px;
@@ -99,7 +123,7 @@ pre {
     overflow: hidden;
     max-width: 100%;
 
-    background-color:var(--pre-background-color);
+    background-color:rgb(30, 30, 30);
 
     color: rgb(212, 212, 212);
     
@@ -117,49 +141,6 @@ sub {
 
 sup {
     font-size: 0.50em;
-}
-
-nav {
-    background-color: var(--nav-background-color);
-}
-
-header {
-    padding-top: 5.3rem;
-    background-color: var(--header-background-color);
-}
-
-footer {
-    background-color: var(--footer-background-color);
-}
-
-.navbar-brand b {
-    margin: 0;
-    padding: 0;
-    display: inline-block;
-}
-
-.navbar-brand img {
-    color: var(--main-text-color);
-
-    margin-top: 0;
-    margin-bottom: 0;
-    margin-left: 0;
-    margin-right: 0.25rem;
-    padding: 0;
-    display: inline-block;
-}
-
-.navbar-nav .nav-item .nav-link {
-    color: var(--unclicked-text-color);
-}
-
-.navbar-nav .nav-item .nav-link:hover {
-    color: var(--clicked-text-color);
-}
-
-.navbar-nav .nav-item .nav-link.active {
-    color: var(--clicked-text-color);
-    text-decoration: underline;
 }
 
 .editable {
