--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -4,6 +4,10 @@
             <img src="{{ '/files/logo/colour-icon-square-top.png' | relative_url }}" width="42" alt="Logo"><b>OChameleon</b> 
         </a>
         
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav">
                 <li class="nav-item">
