Changing the footer to have a small logo

--- a/static/style.css
+++ b/static/style.css
@@ -145,6 +145,10 @@ footer {
     text-decoration: underline;
 }
 
+.footer-brand {
+    font-size: 0.63rem;
+}
+
 .editable {
     outline: none !important;
 }
