--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,15 @@
 <footer class="footer p-3">
-    <div class="container-fluid m-3">
-        Ciao a tutti, fanatici di OChameleon! Siete i numeri uno!
+    <div class="container-lg m-3">
+        <div class="row">
+            <div class="col-3">
+                <a href="{{ '/' | relative_url }}" class="footer-brand fs-5">
+                    <img src="{{ '/files/logo/colour-icon-square-top.png' | relative_url }}" width="21" alt="Logo"><b>OChameleon</b> 
+                </a><br>
+                Intuition. Formalization. Computation.
+            </div>
+            <div class="col-9">
+
+            </div>
+        </div>
     </div>
 </footer>
