--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-lg navbar-dark fixed-top p-2">
-    <div class="container">
+    <div class="container-lg">
         <a href="{{ '/' | relative_url }}" class="navbar-brand fs-5">
             <img src="{{ '/files/logo/colour-icon-square-top.png' | relative_url }}" width="42" alt="Logo"><b>OChameleon</b> 
         </a>
