Changing footer logo and removing unnecessary formatting in navbar-brand

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,7 +2,7 @@
     <div class="container-lg m-3">
         <div class="row">
             <div class="col-3">
-                <a href="{{ '/' | relative_url }}" class="footer-brand fs-5">
+                <a href="{{ '/' | relative_url }}" class="footer-brand">
                     <img src="{{ '/files/logo/colour-icon-square-top.png' | relative_url }}" width="21" alt="Logo"><b>OChameleon</b> 
                 </a><br>
                 Intuition. Formalization. Computation.
