--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg navbar-dark fixed-top p-2">
     <div class="container-lg">
-        <a href="{{ '/' | relative_url }}" class="navbar-brand fs-5">
+        <a href="{{ '/' | relative_url }}" class="navbar-brand">
             <img src="{{ '/files/logo/colour-icon-square-top.png' | relative_url }}" width="42" alt="Logo"><b>OChameleon</b> 
         </a>
         
