Making f-7 to fs-8 for practical pourpose and changing settings for footer logo

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -5,7 +5,9 @@
                 <a href="{{ '/' | relative_url }}" class="footer-brand">
                     <img src="{{ '/files/logo/colour-icon-square-top.png' | relative_url }}" width="21" alt="Logo"><b>OChameleon</b> 
                 </a><br>
-                Intuition. Formalization. Computation.
+                <div class="fs-8">
+                    Intuition. Formalization. Computation."
+                </div>
             </div>
             <div class="col-9">
 
