Changing menu container max padding size and correcting setup of logo

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,11 +3,9 @@
         <div class="row">
             <div class="col-3">
                 <a href="{{ '/' | relative_url }}" class="footer-brand">
-                    <img src="{{ '/files/logo/colour-icon-square-top.png' | relative_url }}" width="21" alt="Logo"><b>OChameleon</b> 
+                    <img src="{{ '/files/logo/colour-icon-square-top.png' | relative_url }}" width="31" alt="Logo"><b>OChameleon</b> 
                 </a><br>
-                <div class="fs-8">
-                    Intuition. Formalization. Computation."
-                </div>
+                Intuition. Formalization. Computation.
             </div>
             <div class="col-9">
 
