--- a/static/style.css
+++ b/static/style.css
@@ -117,7 +117,7 @@ footer {
     background-color: var(--nav-background-color);
 }
 
-.navbar-brand b {
+.navbar-brand {
     margin: 0;
     padding: 0;
     display: inline-block;
@@ -150,32 +150,28 @@ footer {
     text-decoration: none !important;
 }
 
-.navbar-brand img {
+.footer-brand img {
     margin-top: 0;
     margin-bottom: 0;
     margin-left: 0;
-    margin-right: 0.15rem;
+    margin-right: 0.8rem;
     padding: 0;
     display: inline-block;
 }
 
-.navbar-brand b {
+.footer-brand {
+    font-size: 0.63rem;
+
     margin: 0;
     padding: 0;
     display: inline-block;
 }
 
-.navbar-brand img {
+.footer-brand img {
     margin-top: 0;
     margin-bottom: 0;
     margin-left: 0;
     margin-right: 0.13rem;
-    padding: 0;
-    display: inline-block;
-}
-
-.navbar-brand b {
-    margin: 0;
     padding: 0;
     display: inline-block;
 }
